# local-rag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/local_rag/: __init__.py  cli.py  config.py  embedder.py  llm.py  loader.py  store.py
tests/: test_cli.py  test_embedder.py  test_llm.py  test_loader.py  test_store.py
